Prevent horizontal scroll bar on BS4 grid system and fix transition #178.

--- a/style/adaptable.css
+++ b/style/adaptable.css
@@ -1514,9 +1514,12 @@ div.questionbankwindow.block {
     color: [[setting:fontcolor]];
 }
 
-#region-main,
 .container {
     transition: width .5s ease-in-out;
+}
+
+#region-main {
+    transition: all .5s ease-in-out;
 }
 
 #block-region-side-post {
