--- a/style/extras.css
+++ b/style/extras.css
@@ -1216,6 +1216,12 @@ html[xmlns] .slides {
     width: [[setting:fullscreenwidth]];
 }
 
+/* Prevent horizontal scroll bar on BS4 grid system. */
+.fullin .container > .row {
+    margin-left: 0;
+    margin-right: 0;
+}
+
 /* .fullin #adaptable-page-header-wrapper .container {
     width: 100%;
 } */
